resolve-overflow-of-parallax

--- a/src/components/Parallax/parallaxContent.scss
+++ b/src/components/Parallax/parallaxContent.scss
@@ -1,10 +1,11 @@
 .parallax-container {
-    position: absolute;
+    position: sticky;
     top: 0;
     left: 12%;
-    width: 30%;
+    width: 18%;
     height: 2000px;
     z-index: 0;
+    order: 1;
 
     div {
         height: 4200px;
@@ -12,13 +13,13 @@
 }
 
 .parallax-container-right{
-    position: absolute;
+    position: sticky;
     top: 0;
-    right: -2%;
-    width: 30%;
+    width: 18%;
     height: 2000px;
     z-index: 0;
     transition: all 1s ease;
+    order: 3;
 
     div {
         height: 4200px;
