--- a/src/components/Parallax/parallaxObjects.scss
+++ b/src/components/Parallax/parallaxObjects.scss
@@ -4,8 +4,7 @@
     align-items: center;
 
     img {
-        width: 10rem;
-        margin-left: 20rem;    
+        width: 10rem; 
         filter: drop-shadow(2px 4px 12px black);
     }
 }
