--- a/src/pages/Dashboard/components/menu/menuContainer.scss
+++ b/src/pages/Dashboard/components/menu/menuContainer.scss
@@ -5,8 +5,9 @@
     align-items: center;
     justify-content: center;
     height: 80vh;
-    width: 32rem;
+    width: 25%;
     margin-left: 10rem;
+    order: 0;
 
     .menu {
         position: fixed;
