--- a/src/pages/ProfilePage/components/profileInfo.scss
+++ b/src/pages/ProfilePage/components/profileInfo.scss
@@ -7,6 +7,7 @@
     height: 80vh;
     width: 32rem;
     margin-left: 10rem;
+    order: 0;
 
     .profile {
         position: fixed;
