--- a/src/pages/ProfilePage/profilePage.scss
+++ b/src/pages/ProfilePage/profilePage.scss
@@ -11,9 +11,10 @@
         width: 45%;
         flex-direction: column;
         align-items: center;
-        background-color: $lightGray;
-        margin: 3rem auto 2rem auto;
+        background-color: $lightGray;   
+        margin: 3rem 0 2rem 0;
         border-radius: 3rem;
+        order: 2;
         
 
         .profile-no-posts {
